infra/k8s/base/central/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: og-core
---
apiVersion: v1
kind: Namespace
metadata:
  name: og-apps
